--- a/IDE/ui/submit.html
+++ b/IDE/ui/submit.html
@@ -35,8 +35,14 @@
         <button class="btn" onclick="saveCode()"> Save </button>
     </div>
 
+    <br><br>
     <div class="output"></div>
-    <script src="js/Ide.js"></script>
+
+    <br><br>
+    &nbsp
+    <a href="home.html">Home</a>
+
+    <script src="js/ide.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
 
