--- a/IDE/ui/uploadChecker.html
+++ b/IDE/ui/uploadChecker.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>uploadChecker</title>
+    <title>Upload Checker</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/ipfs-core/dist/index.min.js"></script>
 </head>
 <body>
-    <div class="header"> uploadChecker </div>
+    <div class="header"> Upload Checker </div>
 
     <br><br>
-
+    &nbsp
     <label>  Problem ID:</label>
     <input type="text" id="problemId">
 
@@ -29,13 +29,17 @@
     <div class="editor" id="editor"></div>
 
     <div class="button-container">
-        <button class="btn" onclick="executeCode()"> Run </button>
-        &nbsp 
-        <button class="btn" onclick="saveCode()"> Save </button>
+        <a href="home.html">
+            <button class="btn" onclick="addChecker()"> Submit </button>
+        </a>
     </div>
 
-    <div class="output"></div>
-    <script src="js/Ide.js"></script>
+    <br><br>
+    &nbsp
+    <a href="home.html">Home</a>
+
+    <script src="js/ide.js"></script>
+    <script src="js/addChecker.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
 
