--- a/IDE/ui/uploadTestCase.html
+++ b/IDE/ui/uploadTestCase.html
@@ -23,7 +23,13 @@
 
     <br><br>
     &nbsp 
-    <button class="btn" onclick="addTestCase()"> Submit </button>
+    <a href="home.html">
+        <button class="btn" onclick="addTestCase()"> Submit </button>
+    </a>
+
+    <br><br>
+    &nbsp
+    <a href="home.html">Home</a>
 
     <script src="js/addTestCase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
