--- a/IDE/ui/index.html
+++ b/IDE/ui/index.html
@@ -83,7 +83,7 @@
       <span class="fs-4"> Problem list </span>
     </a>
     <br>
-    <a href="ide.html">
+    <a href="submit.html">
         <span class="fs-4"> Submit </span>
       </a>
   </body>
