--- a/IDE/ui/uploadChecker.html
+++ b/IDE/ui/uploadChecker.html
@@ -36,7 +36,7 @@
 
     <br><br>
     &nbsp
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
 
     <script src="js/ide.js"></script>
     <script src="js/addChecker.js"></script>
