--- a/IDE/ui/index.html
+++ b/IDE/ui/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>Algo.oj</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -31,14 +31,16 @@
           <use xlink:href="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"/>
         </svg>
         -->
+        
         <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-        <span class="fs-4">Simple header</span>
+        &nbsp
+        <span class="fs-4">Algo.oj</span>
       </a>
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Contests</a></li>
-        <li class="nav-item"><a href="Problems.html" class="nav-link">Problems</a></li>
+        <li class="nav-item"><a href="problems.html" class="nav-link">Problems</a></li>
         <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
       </ul>
@@ -79,12 +81,24 @@
     </script>
 
     <h2 class="mymargin"> Maybe Problem List </h2>
-    <a href="Problems.html">
+    &nbsp
+    <a href="problems.html">
       <span class="fs-4"> Problem list </span>
     </a>
-    <br>
+    <br><br>
+    &nbsp 
+    <a href="uploadTestCase.html">
+        <span class="fs-4"> Upload Test Case </span>
+    </a>
+    <br><br>
+    &nbsp 
+    <a href="uploadChecker.html">
+        <span class="fs-4"> Upload Checker </span>
+    </a>
+    <br><br>
+    &nbsp 
     <a href="submit.html">
-        <span class="fs-4"> Submit </span>
-      </a>
+        <span class="fs-4"> Submit to Problem </span>
+    </a>
   </body>
 </html>
