--- a/IDE/ui/submit.html
+++ b/IDE/ui/submit.html
@@ -40,7 +40,7 @@
 
     <br><br>
     &nbsp
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
 
     <script src="js/ide.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
