--- a/IDE/ui/uploadTestCase.html
+++ b/IDE/ui/uploadTestCase.html
@@ -29,7 +29,7 @@
 
     <br><br>
     &nbsp
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
 
     <script src="js/addTestCase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
