--- a/IDE/ui/problems.html
+++ b/IDE/ui/problems.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>test.oj</title>
     <!-- <link rel="stylesheet" href="main.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,27 +14,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
     
-  <body>
+  <body class="light-theme" style="margin:0; padding: 5px 20px">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+          <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <!--
             <svg class="bi" width="32" height="32" fill="currentColor">
               <use xlink:href="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"/>
             </svg>
             -->
             <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-            <span class="fs-4">Simple header</span>
+            &nbsp;
+            <span class="fs-4">test.oj</span>
           </a>
     
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contests</a></li>
-            <li class="nav-item"><a href="Problems2.html" class="nav-link active" aria-current="page">Problems</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="problems.html" class="nav-link active" aria-current="page">Problems</a></li>
+            <li class="nav-item"><a href="uploadChecker.html" class="nav-link">Upload Checker</a></li>
+            <li class="nav-item"><a href="uploadTestCase.html" class="nav-link">Upload Test Case</a></li>
+            <li class="nav-item"><a href="submit.html" class="nav-link"  aria-current="page">Submit</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">User</a></li>
           </ul>
         </header>
     </div>
