--- a/IDE/ui/uploadTestCase.html
+++ b/IDE/ui/uploadTestCase.html
@@ -49,13 +49,9 @@
     </header>
     </div>
  
-    <div class="mb-3 row">
-      &nbsp &nbsp 
-      <label  class="col-sm-2 col-form-label">Problem ID</label>
-      <div class="col-sm-10">
-        <input class="form-control" id="problemId">
-      </div>
-    </div>
+    &nbsp 
+    <label>  Problem ID:</label>
+    <input type="text" id="problemId">
 
     <br><br>
 
