--- a/IDE/ui/uploadChecker.html
+++ b/IDE/ui/uploadChecker.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ipfs-core/dist/index.min.js"></script>
+  
     <style>
         .mymargin{
             margin-left: 2em;
@@ -41,6 +42,7 @@
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="problems.html" class="nav-link">Problems</a></li>
+        <li class="nav-item"><a href="uploadProblem.html" class="nav-link">Upload Problem</a></li>
         <li class="nav-item"><a href="uploadChecker.html" class="nav-link  active"   aria-current="page">Upload Checker</a></li>
         <li class="nav-item"><a href="uploadTestCase.html" class="nav-link">Upload Test Case</a></li>
         <li class="nav-item"><a href="submit.html" class="nav-link">Submit</a></li>
