--- a/IDE/ui/problem_id/problem_preview.html
+++ b/IDE/ui/problem_id/problem_preview.html
@@ -86,12 +86,12 @@
       </a>
 
       <ul class="nav nav-pills">
-       <li class="nav-item"><a href="index.html" class="nav-link" >Home</a></li>
-        <li class="nav-item"><a href="problems.html" class="nav-link">Problems</a></li>
-        <li class="nav-item"><a href="uploadProblem.html" class="nav-link">Upload Problem</a></li>
-        <li class="nav-item"><a href="uploadChecker.html" class="nav-link">Upload Checker</a></li>
-        <li class="nav-item"><a href="uploadTestCase.html" class="nav-link">Upload Test Case</a></li>
-        <li class="nav-item"><a href="submit.html" class="nav-link">Submit</a></li>
+       <li class="nav-item"><a href="../index.html" class="nav-link" >Home</a></li>
+        <li class="nav-item"><a href="../problems.html" class="nav-link">Problems</a></li>
+        <li class="nav-item"><a href="../uploadProblem.html" class="nav-link">Upload Problem</a></li>
+        <li class="nav-item"><a href="../uploadChecker.html" class="nav-link">Upload Checker</a></li>
+        <li class="nav-item"><a href="../uploadTestCase.html" class="nav-link">Upload Test Case</a></li>
+        <li class="nav-item"><a href="../submit.html" class="nav-link">Submit</a></li>
         <li class="nav-item"><a href="#" class="nav-link">User</a></li> 
       </ul>
     </header>
