--- a/IDE/ui/uploadTestCase.html
+++ b/IDE/ui/uploadTestCase.html
@@ -46,7 +46,7 @@
         <li class="nav-item"><a href="uploadChecker.html" class="nav-link">Upload Checker</a></li>
         <li class="nav-item"><a href="uploadTestCase.html" class="nav-link  active"   aria-current="page">Upload Test Case</a></li>
         <li class="nav-item"><a href="submit.html" class="nav-link">Submit</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">User</a></li>
+        <li class="nav-item"><a href="user.html" class="nav-link">User</a></li>
       </ul>
     </header>
     </div>
