--- a/IDE/ui/user.html
+++ b/IDE/ui/user.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test.oj</title>
-
+    <link rel="stylesheet" href="css/user.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
@@ -45,54 +45,44 @@
         <li class="nav-item"><a href="uploadProblem.html" class="nav-link">Upload Problem</a></li>
         <li class="nav-item"><a href="uploadChecker.html" class="nav-link">Upload Checker</a></li>
         <li class="nav-item"><a href="uploadTestCase.html" class="nav-link">Upload Test Case</a></li>
-        <li class="nav-item"><a href="submit.html" class="nav-link active"  aria-current="page">Submit</a></li>
-        <li class="nav-item"><a href="user.html" class="nav-link">User</a></li>
+        <li class="nav-item"><a href="submit.html" class="nav-link">Submit</a></li>
+        <li class="nav-item"><a href="user.html" class="nav-link active"  aria-current="page">User</a></li>
       </ul>
     </header>
     </div>
 
     &nbsp 
-    <label>  Problem ID:</label>
-    <input type="text" id="problemId">
+    <img src="https://i.redd.it/b3ozgl2xy2u61.png" class="img-fluid" style="height:390px; overflow: hidden;"alt="...">
 
+    <br><br><br><br><br>
+    <div class="progress">
+        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 9%">
+      </div>
+    </div>
     <br><br>
-
-    <div class="control-panel">
-        Select Language:
-        &nbsp; &nbsp;
-        <select id="languages" class="languages" onchange="changeLanguage()">
-            <option value="cpp"> C++ </option>
-        </select>
+    <div class="progress">
+        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 37%">
+      </div>
     </div>
-
-    <div class="editor" id="editor"></div>
-
-    <div class="button-container">
-        <button class="btn btn-outline-primary" onclick="executeCode()"> Run </button>
-        &nbsp 
-        <button class="btn btn-outline-primary" onclick="saveCode()"> Save </button>
+    <br><br>
+    <div class="progress">
+        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+      </div>
     </div>
+    <br><br>
+    <div class="progress">
+        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated " role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+      </div>
+    </div>
+    <br><br>
+    <div class="progress">
+        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
+      </div>
+    </div>
+    <br><br>
+    
+    <script src="js/User.js"></script>
 
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Score</th>
-            <th scope="col">Time(ms)</th>
-            <th scope="col">Memory(KB)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td> &nbsp <span id="output"></span></td>
-            <td> &nbsp <span id="time"></td>
-            <td> &nbsp <span id="memory"></td>
-          </tr>
-        </tbody>
-      </table>
-
-    <script src="js/ide.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
   </body>
