--- a/IDE/ui/problems.html
+++ b/IDE/ui/problems.html
@@ -15,7 +15,7 @@
     
   </head>
     
-  <body class="light-theme" style="margin:0; padding: 5px 20px">
+  <body class="light-theme" style="margin: auto; padding: 5px 20px;max-width:1100px;">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <div class="container">
