--- a/IDE/ui/problem_id/problem_preview.html
+++ b/IDE/ui/problem_id/problem_preview.html
@@ -102,7 +102,7 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-1">
               <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="pb-2 border-bottom"></h1>
+                <h1 class="pb-2 border-bottom">1 . </h1>
               </div>
             </div>
             
@@ -144,6 +144,6 @@
           </div>
 
       </main>
-    
+      <script src="../js/problemPreview.js"></script>
   </body>
 </html>
