--- a/IDE/ui/problem_id/problemTemplate.html
+++ b/IDE/ui/problem_id/problemTemplate.html
@@ -67,7 +67,7 @@
       <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
   </head>
     
-  <body class="light-theme" style="margin:0; padding: 5px 20px">
+  <body class="light-theme" style="margin:0 auto; padding: 5px 20px; width:1100px">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
