--- a/IDE/ui/uploadProblem.html
+++ b/IDE/ui/uploadProblem.html
@@ -78,9 +78,8 @@
           <use xlink:href="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"/>
         </svg>
         -->
-        
-        <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-        &nbsp
+      
+        &nbsp;
         <span class="fs-4">test.oj</span>
       </a>
 
