--- a/IDE/ui/index.html
+++ b/IDE/ui/index.html
@@ -36,7 +36,8 @@
           box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
         }
   
-        .b-example-vr {
+        .b-example
+        -vr {
           flex-shrink: 0;
           width: 1.5rem;
           height: 100vh;
@@ -80,9 +81,7 @@
           <use xlink:href="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"/>
         </svg>
         -->
-        
-        <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-        &nbsp
+        &nbsp;
         <span class="fs-4">test.oj</span>
       </a>
 
