--- a/IDE/ui/user.html
+++ b/IDE/ui/user.html
@@ -33,9 +33,8 @@
           <use xlink:href="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"/>
         </svg>
         -->
-        
-        <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-        &nbsp
+
+        &nbsp;
         <span class="fs-4">test.oj</span>
       </a>
 
@@ -56,32 +55,26 @@
 
     <br><br><br><br><br>
     <div class="progress">
-        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 9%">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-    </div>
-    <br><br>
-    <div class="progress">
-        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 37%">
+      <br><br>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-    </div>
-    <br><br>
-    <div class="progress">
-        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+      <br><br>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-info progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-    </div>
-    <br><br>
-    <div class="progress">
-        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated " role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+      <br><br>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-    </div>
-    <br><br>
-    <div class="progress">
-        <div id="dynamic" class="progress-bar progress-bar-success progress-bar-striped active progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
+      <br><br>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated"role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-    </div>
-    <br><br>
-    
-    <script src="js/User.js"></script>
+      <br><br>
+    <script src="js/user.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
