--- a/IDE/ui/problem_id/problemTemplate.html
+++ b/IDE/ui/problem_id/problemTemplate.html
@@ -80,8 +80,7 @@
         </svg>
         -->
         
-        <img class="d-inline-block align-top" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30">
-        &nbsp
+        &nbsp;
         <span class="fs-4">test.oj</span>
       </a>
 
