--- a/IDE/ui/uploadChecker.html
+++ b/IDE/ui/uploadChecker.html
@@ -6,7 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test.oj</title>
-
+    <!-- Font Awesome -->
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.css"
+    rel="stylesheet"
+    />
+    <!-- MDB -->
+    <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.js"
+    ></script>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
@@ -35,17 +54,22 @@
         -->
         
         &nbsp;
-        <span class="fs-4">test.oj</span>
+        <span class="fs-4"><h2>test.oj</h2></span>
       </a>
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="problems.html" class="nav-link">Problems</a></li>
-        <li class="nav-item"><a href="uploadProblem.html" class="nav-link">Upload Problem</a></li>
-        <li class="nav-item"><a href="uploadChecker.html" class="nav-link  active"   aria-current="page">Upload Checker</a></li>
-        <li class="nav-item"><a href="uploadTestCase.html" class="nav-link">Upload Test Case</a></li>
-        <li class="nav-item"><a href="submit.html" class="nav-link">Submit</a></li>
-        <li class="nav-item"><a href="user.html" class="nav-link">User</a></li>
+        <li class="nav-item"><a href="problems.html" class="nav-link">Problem Set</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">New Problem</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="uploadProblem.html">Upload Problem</a>
+            <a class="dropdown-item" href="uploadChecker.html">Upload Checker</a>
+            <a class="dropdown-item" href="uploadTestCase.html">Upload Test Case</a>
+          </div>
+        </li>
+        <li class="nav-item"><a href="submit.html" class="nav-link">Submit To Problem</a></li>
+        <li class="nav-item"><a href="user.html" class="nav-link">User</a></li> 
       </ul>
     </header>
     </div>
