--- a/IDE/ui/uploadTestCase.html
+++ b/IDE/ui/uploadTestCase.html
@@ -68,7 +68,7 @@
             <a class="dropdown-item" href="uploadTestCase.html">Upload Test Case</a>
           </div>
         </li>
-        <li class="nav-item"><a href="submit.html" class="nav-link active" aria-current="page">Submit To Problem</a></li>
+        <li class="nav-item"><a href="submit.html" class="nav-link">Submit To Problem</a></li>
         <li class="nav-item"><a href="user.html" class="nav-link">User</a></li> 
       </ul>
     </header>
