--- a/IDE/ui/submit.html
+++ b/IDE/ui/submit.html
@@ -32,7 +32,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ipfs-core/dist/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+        type="application/javascript"></script>
     <style>
         .mymargin{
             margin-left: 2em;
@@ -56,20 +57,19 @@
         &nbsp;
         <span class="fs-4"><h2>test.oj</h2></span>
       </a>
-
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="problems.html" class="nav-link">Problem Set</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">New Problem</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="uploadProblem.html">Upload Problem</a>
-            <a class="dropdown-item" href="uploadChecker.html">Upload Checker</a>
-            <a class="dropdown-item" href="uploadTestCase.html">Upload Test Case</a>
-          </div>
-        </li>
-        <li class="nav-item"><a href="submit.html" class="nav-link active" aria-current="page">Submit To Problem</a></li>
-        <li class="nav-item"><a href="user.html" class="nav-link">User</a></li> 
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="problems.html" class="nav-link">Problem Set</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">New Problem</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="uploadProblem.html">Upload Problem</a>
+              <a class="dropdown-item" href="uploadChecker.html">Upload Checker</a>
+              <a class="dropdown-item" href="uploadTestCase.html">Upload Test Case</a>
+            </div>
+          </li>
+          <li class="nav-item"><a href="submit.html" class="nav-link active" aria-current="page">Submit To Problem</a></li>
+          <li class="nav-item"><a class="nav-link" onclick="toggleButton()"  id="userPage" ><span id="User">&ensp;&ensp;&ensp;&ensp;&ensp;&thinsp;</a></li> 
       </ul>
     </header>
     </div>
@@ -114,7 +114,7 @@
           </tr>
         </tbody>
       </table>
-
+    <script src="js/user.js"></script>
     <script src="js/ide.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
