--- a/IDE/ui/uploadChecker.html
+++ b/IDE/ui/uploadChecker.html
@@ -32,7 +32,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ipfs-core/dist/index.min.js"></script>
-  
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+    type="application/javascript"></script>
     <style>
         .mymargin{
             margin-left: 2em;
@@ -69,7 +70,7 @@
           </div>
         </li>
         <li class="nav-item"><a href="submit.html" class="nav-link">Submit To Problem</a></li>
-        <li class="nav-item"><a href="user.html" class="nav-link">User</a></li> 
+        <li class="nav-item"><a class="nav-link" onclick="toggleButton()"  id="userPage" ><span id="User">&ensp;&ensp;&ensp;&ensp;&ensp;&thinsp;</a></li> 
       </ul>
     </header>
     </div>
@@ -97,7 +98,7 @@
         </a>
     </div>
 
-
+    <script src="js/user.js"></script>
     <script src="js/ide.js"></script>
     <script src="js/addChecker.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
