--- a/IDE/ui/uploadProblem.html
+++ b/IDE/ui/uploadProblem.html
@@ -31,6 +31,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+        type="application/javascript"></script>
     <style>
         .bd-placeholder-img {
           font-size: 1.125rem;
@@ -115,7 +117,7 @@
           </div>
         </li>
         <li class="nav-item"><a href="submit.html" class="nav-link">Submit To Problem</a></li>
-        <li class="nav-item"><a href="user.html" class="nav-link">User</a></li> 
+        <li class="nav-item"><a class="nav-link" onclick="toggleButton()"  id="userPage" ><span id="User">&ensp;&ensp;&ensp;&ensp;&ensp;&thinsp;</a></li> 
       </ul>
     </header>
     </div>
@@ -153,7 +155,7 @@
     
     </div>
     
-
+    <script src="js/user.js"></script>
     <script src="js/addProblem.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
