--- a/IDE/ui/problem_id/problemTemplate.html
+++ b/IDE/ui/problem_id/problemTemplate.html
@@ -118,7 +118,7 @@
           </div>
         </li>
         <li class="nav-item"><a href="../submit.html" class="nav-link">Submit To Problem</a></li>
-        <li class="nav-item"><a onclick="toggleButton()" href="../user.html" class="nav-link"><span id="User"></a></li> 
+        <li class="nav-item"><a onclick="toggleButton()"  class="nav-link" id="userPage"><span id="User">&ensp;&ensp;&ensp;&ensp;&ensp;&thinsp;</a></li> 
       </ul>
     </header>
     </div>
@@ -169,7 +169,6 @@
           </div>
 
       </main>
-      <script src="../js/user.js"></script>
-      <script src="../js/problemPreview.js"></script>
+      <script src="../js/preview.js"></script>
   </body>
 </html>
