--- a/IDE/ui/problems.html
+++ b/IDE/ui/problems.html
@@ -63,7 +63,7 @@
               </div>
             </li>
             <li class="nav-item"><a href="submit.html" class="nav-link">Submit To Problem</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="toggleButton()" id="userPage" ><span id="User">&ensp;&ensp;&ensp;&ensp;&ensp;&thinsp;</a></li> 
+            <li class="nav-item"><a class="nav-link" onclick="toggleButton()" id="userPage" ><span id="User">Users</a></li> 
           </ul>
         </header>
     </div>
