--- a/IDE/ui/submit.html
+++ b/IDE/ui/submit.html
@@ -69,7 +69,7 @@
             </div>
           </li>
           <li class="nav-item"><a href="submit.html" class="nav-link active" aria-current="page">Submit To Problem</a></li>
-          <li class="nav-item"><a class="nav-link" onclick="toggleButton()"  id="userPage" ><span id="User">&ensp;&ensp;&ensp;&ensp;&ensp;&thinsp;</a></li> 
+          <li class="nav-item"><a class="nav-link" onclick="toggleButton()"  id="userPage" ><span id="User">Users</a></li> 
       </ul>
     </header>
     </div>
