--- a/IDE/ui/problem_id/problemTemplate.html
+++ b/IDE/ui/problem_id/problemTemplate.html
@@ -96,7 +96,7 @@
     
     <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+      <a href="../index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <!--
         <svg class="bi" width="32" height="32" fill="currentColor">
           <use xlink:href="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"/>
@@ -169,6 +169,6 @@
           </div>
 
       </main>
-      <script src="../js/preview.js"></script>
+      <script src="../js/Preview.js"></script>
   </body>
 </html>
