--- a/IDE/ui/problem_id/problem_preview.html
+++ b/IDE/ui/problem_id/problem_preview.html
@@ -169,6 +169,6 @@
           </div>
 
       </main>
-      <script src="../js/Preview.js"></script>
+      <script src="../js/review.js"></script>
   </body>
 </html>
