--- a/IDE/ui/submit.html
+++ b/IDE/ui/submit.html
@@ -80,6 +80,12 @@
 
     <br><br>
 
+    &nbsp 
+    <label>  Price:</label>
+    <input type="text" id="price"> finney (1000 finney = 1 ether)
+
+    <br><br>
+
     <div class="control-panel">
         Select Language:
         &nbsp; &nbsp;
@@ -115,7 +121,7 @@
         </tbody>
       </table>
     <script src="js/user.js"></script>
-    <script src="js/ide.js"></script>
+    <script src="js/submit.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
   </body>
