--- a/IDE/ui/uploadChecker.html
+++ b/IDE/ui/uploadChecker.html
@@ -99,7 +99,7 @@
     </div>
 
     <script src="js/user.js"></script>
-    <script src="js/ide.js"></script>
+    <script src="js/submit.js"></script>
     <script src="js/addChecker.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
