--- a/IDE/ui/uploadProblem.html
+++ b/IDE/ui/uploadProblem.html
@@ -149,7 +149,7 @@
       <br>
       <div>
     
-        <a href="problem_id/problem_preview.html" class="btn btn-outline-primary" onclick="addProblem()"> Submit </a>
+        <a class="btn btn-outline-primary" onclick="addProblem()"> Submit </a>
         &nbsp;
         <a href="problem_id/problem_preview.html" class="btn btn-outline-primary" onclick="preview()"> Preview </a>
     
