--- a/IDE/ui/uploadProblem.html
+++ b/IDE/ui/uploadProblem.html
@@ -154,6 +154,12 @@
         <a href="problem_id/problem_preview.html" class="btn btn-outline-primary" onclick="preview()"> Preview </a>
     
     </div>
+
+    <br><br><br>
+
+    <div>
+      <span id="result"></span>
+    </div>
     
     <script src="js/user.js"></script>
     <script src="js/addProblem.js"></script>
