--- a/IDE/ui/index.html
+++ b/IDE/ui/index.html
@@ -34,7 +34,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
-        type="application/javascript"></script>
+        type="applicationjavascript"></script>
     <style>
         .bd-placeholder-img {
           font-size: 1.125rem;
@@ -110,14 +110,7 @@
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="problems.html" class="nav-link">Problem Set</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">New Problem</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="uploadProblem.html">Upload Problem</a>
-            <a class="dropdown-item" href="uploadChecker.html">Upload Checker</a>
-            <a class="dropdown-item" href="uploadTestCase.html">Upload Test Case</a>
-          </div>
-        </li>
+        <li class="nav-item"><a href="uploadProblem.html" class="nav-link">New Problem</a></li>
         <li class="nav-item"><a href="submit.html" class="nav-link">Submit To Problem</a></li>
         <li class="nav-item"><a onclick="toggleButton()"class="nav-link" id="userPage"><span id="User">Users</a></li> 
       </ul>
