--- a/IDE/ui/problems.html
+++ b/IDE/ui/problems.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test.oj</title>
-    
+    <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="main.css"> -->
     <!-- Font Awesome -->
     <link
@@ -56,14 +56,7 @@
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="problems.html" class="nav-link  active" aria-current="page">Problem Set</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">New Problem</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="uploadProblem.html">Upload Problem</a>
-                <a class="dropdown-item" href="uploadChecker.html">Upload Checker</a>
-                <a class="dropdown-item" href="uploadTestCase.html">Upload Test Case</a>
-              </div>
-            </li>
+            <li class="nav-item"><a href="uploadProblem.html" class="nav-link">New Problem</a></li>
             <li class="nav-item"><a href="submit.html" class="nav-link">Submit To Problem</a></li>
             <li class="nav-item"><a class="nav-link" onclick="toggleButton()" id="userPage" ><span id="User">Users</a></li> 
           </ul>
@@ -114,34 +107,8 @@
         <div class="col col-xl-10">
           <div class="card mb-5" style="border-radius: 15px;">
             <div class="card-body p-4">
-              <a href="problem_id/problem_0.html">
-              <h3 class="mb-3">0 . test problem</h3>
-              </a>
-              <p class="small mb-0"><i class="far fa-star fa-lg"></i> <span class="mx-2">|</span> Created by
-                <strong>0xc8f1f4f9ed658003c698781e8878ab69a1347aaf</strong></p>
-              <hr class="my-4">
-              <div class="d-flex justify-content-start align-items-center">
-                <p class="mb-0 text-uppercase"><i class="bi bi-check-square-fill"></i> <span class="text-muted small">0</span></p> &nbsp;&nbsp;&nbsp;&nbsp;
-                <p class="mb-0 text-uppercase"><i class="bi bi-currency-dollar"></i> <span class="text-muted small">0.0001</span></p> &nbsp;&nbsp;&nbsp;&nbsp;
-                <p class="mb-0 text-uppercase"><i class="bi bi-stars"></i> <span class="text-muted small">0</span> 
-                  <span class="ms-3 me-4">|</span></p>
-                <a href="#!">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-2.webp" alt="avatar" class="img-fluid rounded-circle me-3" width="35">
-                </a>
-                <button type="button" class="btn btn-outline-dark btn-sm btn-floating">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row d-flex justify-content-center">
-        <div class="col col-xl-10">
-          <div class="card mb-5" style="border-radius: 15px;">
-            <div class="card-body p-4">
               <a href="problem_id/problem_1.html">
-              <h3 class="mb-3">1 . ha</h3>
+              <h3 class="mb-3">1 . test</h3>
               </a>
               <p class="small mb-0"><i class="far fa-star fa-lg"></i> <span class="mx-2">|</span> Created by
                 <strong>0xc8f1f4f9ed658003c698781e8878ab69a1347aaf</strong></p>
@@ -167,7 +134,7 @@
           <div class="card mb-5" style="border-radius: 15px;">
             <div class="card-body p-4">
               <a href="problem_id/problem_2.html">
-              <h3 class="mb-3">2 . csa</h3>
+              <h3 class="mb-3">2 . haha</h3>
               </a>
               <p class="small mb-0"><i class="far fa-star fa-lg"></i> <span class="mx-2">|</span> Created by
                 <strong>0xc8f1f4f9ed658003c698781e8878ab69a1347aaf</strong></p>
@@ -193,7 +160,7 @@
           <div class="card mb-5" style="border-radius: 15px;">
             <div class="card-body p-4">
               <a href="problem_id/problem_3.html">
-              <h3 class="mb-3">3 . sdv</h3>
+              <h3 class="mb-3">3 . new problem</h3>
               </a>
               <p class="small mb-0"><i class="far fa-star fa-lg"></i> <span class="mx-2">|</span> Created by
                 <strong>0xc8f1f4f9ed658003c698781e8878ab69a1347aaf</strong></p>
@@ -219,7 +186,7 @@
           <div class="card mb-5" style="border-radius: 15px;">
             <div class="card-body p-4">
               <a href="problem_id/problem_4.html">
-              <h3 class="mb-3">4 . sdv</h3>
+              <h3 class="mb-3">4 . new problem</h3>
               </a>
               <p class="small mb-0"><i class="far fa-star fa-lg"></i> <span class="mx-2">|</span> Created by
                 <strong>0xc8f1f4f9ed658003c698781e8878ab69a1347aaf</strong></p>
