--- a/IDE/ui/submit.html
+++ b/IDE/ui/submit.html
@@ -79,6 +79,8 @@
 
     <br><br>
 
+    <h6>Please read input from temp/in.txt</h6>
+
     <div class="control-panel">
         Select Language:
         &nbsp; &nbsp;
