--- a/IDE/ui/uploadProblem.html
+++ b/IDE/ui/uploadProblem.html
@@ -147,7 +147,7 @@
 
     <h4>Checker</h4>
     <br>
-
+    <h6>Please read user's output from temp/out.txt , and read test case from temp/in.txt</h6>
     <div class="control-panel">
         Select Language:
         &nbsp; &nbsp;
@@ -185,6 +185,7 @@
     <br><br>
     
     <script src="js/user.js"></script>
+    <script src="js/submit.js"></script>
     <script src="js/addProblem.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js"></script>
