--- a/IDE/ui/index.html
+++ b/IDE/ui/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test.oj</title>
+    <title>CodeX - A Collaborative Platform for Algorithmic Problem Solving </title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
     <link
@@ -104,7 +104,7 @@
         </svg>
         -->
         &nbsp;
-        <span class="fs-4"><h2>test.oj</h2></span>
+        <span class="fs-4"><h2>CodeX</h2></span>
       </a>
 
       <ul class="nav nav-pills">
@@ -130,7 +130,7 @@
             <img src="https://img.freepik.com/free-vector/blurred-white-background-with-shine-effect_1017-33200.jpg?w=900&t=st=1654310164~exp=1654310764~hmac=76401f67067d6aa590d8b073b1baf4db476f2cc5c5608c141eedd34ef06ef9cc" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <div class="carousel-caption text-end">
-                <h1 style="font-family:Monaco;">A Collaborative Platform to Solve Algorithmic Problems.</h1>
+                <h1 style="font-family:Monaco;">A Collaborative Platform for Algorithmic Problem Solving.</h1>
                 <p style="font-family:Monaco;"></p>
               </div>
             </div>
